<resources>
    <string name="app_name">PetsOnTrail Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_activities">Activities</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_tracking_service">Start tracking service</string>
    <string name="stop_tracking_service">Stop tracking service</string>
    <string name="start_app">Start app</string>
    <string name="create_new_activity">Create new activity</string>
    <string name="clean_empty_activities">Clean empty</string>
    <string name="reload_activities">Reload</string>
    <string name="start_tracking">Start tracking</string>
    <string name="name_of_activity">Name of activity</string>
    <string name="new_activity">New activity</string>
    <string name="refresh">Refresh</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_pets_group">Add group</string>
    <string name="add_new_pet">Add new pet</string>
    <string name="add">Add</string>
    <string name="petname">Name</string>
    <string name="new_pet_select_group">Group</string>
    <string name="btn_ok">OK</string>
    <string name="user_login">Login</string>
    <string name="user_settings">User settings</string>
    <string name="asset_statements">\\\"include\\\": \\\"https://petsontrail.eu:8443/.well-known/assetlinks.json\\\"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>