<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pets_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ActivityPetsEditorFragment">

    <ListView
        android:id="@+id/pets_content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:keepScreenOn="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnPetsEditorCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnPetsEditorAddNewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_pets_group" />

        <Button
            android:id="@+id/btnPetsEditorAddNewPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_pet" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPetsEditorCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>