<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newactivity.NewActivityFragment">

    <TextView
        android:id="@+id/textViewNameOfActivity"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:text="@string/name_of_activity"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNameOfActivity"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listOfPets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameOfActivity"
        app:layout_constraintBottom_toTopOf="@+id/btnNewActivityConfirm">

    </ListView>

    <Button
        android:id="@+id/btnNewActivityPetsEditor"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:text="Pets Editor ..."
        app:layout_constraintBottom_toTopOf="@+id/btnNewActivityCancel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnNewActivityCancel"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnNewActivityConfirm"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:text="@string/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>