<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/buttonStartTracking"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/start_tracking_service"
        app:layout_constraintEnd_toStartOf="@+id/buttonStopTrackingService"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStopTrackingService"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/stop_tracking_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameOfActivity"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/name_of_activity"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTracking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/editTextNameOfActivity"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="184dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintRight_toLeftOf="@+id/buttonNewActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameOfActivity" />

    <Button
        android:id="@+id/buttonNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="2dp"
        android:text="@string/new_activity"
        app:layout_constraintLeft_toRightOf="@+id/editTextNameOfActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameOfActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="563dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameOfActivity"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="Start"
            android:textFontWeight="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="Duration"
            android:textFontWeight="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="Speed"
            android:textFontWeight="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStart" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:text="Distance"
            android:textFontWeight="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

        <TextView
            android:id="@+id/textViewAltitude"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="Altitude"
            android:textFontWeight="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSpeed" />

        <TextView
            android:id="@+id/textViewSpeedPer10Secs"
            android:layout_width="168dp"
            android:layout_height="73dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="Speed per 10secs"
            android:textFontWeight="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDistance" />

        <!-- <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="380dp"
            android:layout_height="278dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent" /> -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>